# repo-manager

./: .claude.md  .gitignore  Cargo.toml  README.md  git_logic.rs  icons.rs  main.rs  ui_components.rs
assets/locales/: en.json  ru.json
src/: lib.rs  main.rs
src/app/: messages.rs  mod.rs  search.rs  tree.rs
src/config/: mod.rs
src/git/: logic.rs  mod.rs  operations.rs  pool.rs
src/localization/: mod.rs
src/logging/: mod.rs
src/ui/: components.rs  icons.rs  mod.rs
src/workspace/: mod.rs
