[package]
name = "repo-manager"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2021"

[dependencies]
# GUI
egui = "0.27"
eframe = "0.27" # Фреймворк для запуска egui-приложений
egui_extras = { version = "0.27", features = ["image"] } # Для поддержки PNG иконок
image = "0.24" # Для работы с PNG

# Git-логика
gix = { version = "0.62", features = ["blocking-network-client"] }

# Асинхронность для фоновых задач
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5" # Для связи между UI и фоновыми потоками

# Утилиты
opener = "0.7" # Для открытия папок в системном проводнике
serde = { version = "1.0", features = ["derive"] } # Для сохранения/загрузки состояния
serde_json = "1.0" # Для JSON сериализации
lazy_static = "1.4" # Для глобального пула операций



# Для создания app bundle на macOS без консоли
[package.metadata.bundle]
name = "Repo Manager"
identifier = "com.repoapp.repo-manager"
category = "DeveloperTool"
short_description = "Git Repository Manager"
copyright = "Copyright (c) 2024"
version = "0.1.0"
# Отключаем консоль в app bundle
resources = []
# Тип приложения - GUI (не консольное)
osx_application_category = "public.app-category.developer-tools"
# Минимальная версия macOS
osx_minimum_system_version = "10.11"